// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate Indexes with the correct html The correct links are included in the raw output 1`] = `
<html lang="en"
      style="min-height:100vh;font-size:16px"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      Morty Docs
    </title>
    <style>
      /* http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
 margin: 0;
 padding: 0;
 border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
 display: block;
}
body {
 line-height: 1;
}
ol, ul {
 list-style: none;
}
blockquote, q {
 quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
 content: '';
 content: none;
}
table {
 border-collapse: collapse;
 border-spacing: 0;
}
sup {
  vertical-align: super;
  font-size: smaller;
  padding-right: 0.2rem;
}
    </style>
  </head>
  <body style="min-height:100vh;font-family:&quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;color:#333;background-color:#fff">
    <div style="min-height:75vh;padding-bottom:20px">
      <div style="border:none;border-radius:0;background-color:#000;margin-bottom:0;width:100%">
        <nav>
          <ol style="padding:1rem;list-style:none;display:flex;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div style="margin-top:10px">
        <div style="margin-top:10px;max-width:600px;margin:auto">
          <ul>
            <li style="font-size:1.5rem;border-bottom:solid black 1px;margin-bottom:1rem;padding-bottom:0.5rem">
              <a href="docs/index.html"
                 style="text-decoration:none;color:#337ab7"
              >
                <span style="display:inline-block;width:1em">
                  <svg aria-hidden="true"
                       style="fill:#337ab7;height:1em;vertical-align:middle"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 576 512"
                  >
                    &lt;!--! Font Awesome Free 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --&gt;
                    <path d="M147.8 192H480V144C480 117.5 458.5 96 432 96h-160l-64-64h-160C21.49 32 0 53.49 0 80v328.4l90.54-181.1C101.4 205.6 123.4 192 147.8 192zM543.1 224H147.8C135.7 224 124.6 230.8 119.2 241.7L0 480h447.1c12.12 0 23.2-6.852 28.62-17.69l96-192C583.2 249 567.7 224 543.1 224z">
                    </path>
                  </svg>
                </span>
                <span style="margin-left:1rem">
                  docs
                </span>
              </a>
            </li>
            <li style="font-size:1.5rem;border-bottom:solid black 1px;margin-bottom:1rem;padding-bottom:0.5rem">
              <a href="folder/index.html"
                 style="text-decoration:none;color:#337ab7"
              >
                <span style="display:inline-block;width:1em">
                  <svg aria-hidden="true"
                       style="fill:#337ab7;height:1em;vertical-align:middle"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 576 512"
                  >
                    &lt;!--! Font Awesome Free 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --&gt;
                    <path d="M147.8 192H480V144C480 117.5 458.5 96 432 96h-160l-64-64h-160C21.49 32 0 53.49 0 80v328.4l90.54-181.1C101.4 205.6 123.4 192 147.8 192zM543.1 224H147.8C135.7 224 124.6 230.8 119.2 241.7L0 480h447.1c12.12 0 23.2-6.852 28.62-17.69l96-192C583.2 249 567.7 224 543.1 224z">
                    </path>
                  </svg>
                </span>
                <span style="margin-left:1rem">
                  folder
                </span>
              </a>
            </li>
            <li style="font-size:1.5rem;border-bottom:solid black 1px;margin-bottom:1rem;padding-bottom:0.5rem">
              <a href="rootFile.html"
                 style="text-decoration:none;color:#337ab7"
              >
                <span style="display:inline-block;width:1em">
                  <svg aria-hidden="true"
                       style="fill:#337ab7;height:1em;vertical-align:middle"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 384 512"
                  >
                    &lt;!--! Font Awesome Free 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --&gt;
                    <path d="M256 0v128h128L256 0zM224 128L224 0H48C21.49 0 0 21.49 0 48v416C0 490.5 21.49 512 48 512h288c26.51 0 48-21.49 48-48V160h-127.1C238.3 160 224 145.7 224 128zM272 416h-160C103.2 416 96 408.8 96 400C96 391.2 103.2 384 112 384h160c8.836 0 16 7.162 16 16C288 408.8 280.8 416 272 416zM272 352h-160C103.2 352 96 344.8 96 336C96 327.2 103.2 320 112 320h160c8.836 0 16 7.162 16 16C288 344.8 280.8 352 272 352zM288 272C288 280.8 280.8 288 272 288h-160C103.2 288 96 280.8 96 272C96 263.2 103.2 256 112 256h160C280.8 256 288 263.2 288 272z">
                    </path>
                  </svg>
                </span>
                <span style="margin-left:1rem">
                  rootFile.html
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;box-sizing:border-box;min-height:25vh;position:relative;text-align:center;padding:1em 0 2em 0;line-height:1.5rem">
      <a href="https://github.com/bbc/morty-docs"
         style="color:#337ab7"
      >
        Morty-Docs on github
      </a>
      <br>
      Page generated on
      1
      <sup>
        st
      </sup>
      December
      2022
    </footer>
  </body>
</html>
`;

exports[`Generate Indexes with the correct html The correct links are included in the raw output 2`] = `
<html lang="en"
      style="min-height:100vh;font-size:16px"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      Morty Docs
    </title>
    <style>
      /* http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
 margin: 0;
 padding: 0;
 border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
 display: block;
}
body {
 line-height: 1;
}
ol, ul {
 list-style: none;
}
blockquote, q {
 quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
 content: '';
 content: none;
}
table {
 border-collapse: collapse;
 border-spacing: 0;
}
sup {
  vertical-align: super;
  font-size: smaller;
  padding-right: 0.2rem;
}
    </style>
  </head>
  <body style="min-height:100vh;font-family:&quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;color:#333;background-color:#fff">
    <div style="min-height:75vh;padding-bottom:20px">
      <div style="border:none;border-radius:0;background-color:#000;margin-bottom:0;width:100%">
        <nav>
          <ol style="padding:1rem;list-style:none;display:flex;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo/folder"
              >
                folder
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div style="margin-top:10px">
        <div style="margin-top:10px;max-width:600px;margin:auto">
          <ul>
            <li style="font-size:1.5rem;border-bottom:solid black 1px;margin-bottom:1rem;padding-bottom:0.5rem">
              <a href="nestedFile.html"
                 style="text-decoration:none;color:#337ab7"
              >
                <span style="display:inline-block;width:1em">
                  <svg aria-hidden="true"
                       style="fill:#337ab7;height:1em;vertical-align:middle"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 384 512"
                  >
                    &lt;!--! Font Awesome Free 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --&gt;
                    <path d="M256 0v128h128L256 0zM224 128L224 0H48C21.49 0 0 21.49 0 48v416C0 490.5 21.49 512 48 512h288c26.51 0 48-21.49 48-48V160h-127.1C238.3 160 224 145.7 224 128zM272 416h-160C103.2 416 96 408.8 96 400C96 391.2 103.2 384 112 384h160c8.836 0 16 7.162 16 16C288 408.8 280.8 416 272 416zM272 352h-160C103.2 352 96 344.8 96 336C96 327.2 103.2 320 112 320h160c8.836 0 16 7.162 16 16C288 344.8 280.8 352 272 352zM288 272C288 280.8 280.8 288 272 288h-160C103.2 288 96 280.8 96 272C96 263.2 103.2 256 112 256h160C280.8 256 288 263.2 288 272z">
                    </path>
                  </svg>
                </span>
                <span style="margin-left:1rem">
                  nestedFile.html
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;box-sizing:border-box;min-height:25vh;position:relative;text-align:center;padding:1em 0 2em 0;line-height:1.5rem">
      <a href="https://github.com/bbc/morty-docs"
         style="color:#337ab7"
      >
        Morty-Docs on github
      </a>
      <br>
      Page generated on
      1
      <sup>
        st
      </sup>
      December
      2022
    </footer>
  </body>
</html>
`;

exports[`Generate Indexes with the correct html The correct links are included in the raw output 3`] = `
<html lang="en"
      style="min-height:100vh;font-size:16px"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      Morty Docs
    </title>
    <style>
      /* http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
 margin: 0;
 padding: 0;
 border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
 display: block;
}
body {
 line-height: 1;
}
ol, ul {
 list-style: none;
}
blockquote, q {
 quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
 content: '';
 content: none;
}
table {
 border-collapse: collapse;
 border-spacing: 0;
}
sup {
  vertical-align: super;
  font-size: smaller;
  padding-right: 0.2rem;
}
    </style>
  </head>
  <body style="min-height:100vh;font-family:&quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;color:#333;background-color:#fff">
    <div style="min-height:75vh;padding-bottom:20px">
      <div style="border:none;border-radius:0;background-color:#000;margin-bottom:0;width:100%">
        <nav>
          <ol style="padding:1rem;list-style:none;display:flex;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo/docs"
              >
                docs
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div style="margin-top:10px">
        <div style="margin-top:10px;max-width:600px;margin:auto">
          <ul>
            <li style="font-size:1.5rem;border-bottom:solid black 1px;margin-bottom:1rem;padding-bottom:0.5rem">
              <a href="arch/index.html"
                 style="text-decoration:none;color:#337ab7"
              >
                <span style="display:inline-block;width:1em">
                  <svg aria-hidden="true"
                       style="fill:#337ab7;height:1em;vertical-align:middle"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 576 512"
                  >
                    &lt;!--! Font Awesome Free 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --&gt;
                    <path d="M147.8 192H480V144C480 117.5 458.5 96 432 96h-160l-64-64h-160C21.49 32 0 53.49 0 80v328.4l90.54-181.1C101.4 205.6 123.4 192 147.8 192zM543.1 224H147.8C135.7 224 124.6 230.8 119.2 241.7L0 480h447.1c12.12 0 23.2-6.852 28.62-17.69l96-192C583.2 249 567.7 224 543.1 224z">
                    </path>
                  </svg>
                </span>
                <span style="margin-left:1rem">
                  arch
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;box-sizing:border-box;min-height:25vh;position:relative;text-align:center;padding:1em 0 2em 0;line-height:1.5rem">
      <a href="https://github.com/bbc/morty-docs"
         style="color:#337ab7"
      >
        Morty-Docs on github
      </a>
      <br>
      Page generated on
      1
      <sup>
        st
      </sup>
      December
      2022
    </footer>
  </body>
</html>
`;

exports[`Generate Indexes with the correct html The correct links are included in the raw output 4`] = `
<html lang="en"
      style="min-height:100vh;font-size:16px"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      Morty Docs
    </title>
    <style>
      /* http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
 margin: 0;
 padding: 0;
 border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
 display: block;
}
body {
 line-height: 1;
}
ol, ul {
 list-style: none;
}
blockquote, q {
 quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
 content: '';
 content: none;
}
table {
 border-collapse: collapse;
 border-spacing: 0;
}
sup {
  vertical-align: super;
  font-size: smaller;
  padding-right: 0.2rem;
}
    </style>
  </head>
  <body style="min-height:100vh;font-family:&quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;color:#333;background-color:#fff">
    <div style="min-height:75vh;padding-bottom:20px">
      <div style="border:none;border-radius:0;background-color:#000;margin-bottom:0;width:100%">
        <nav>
          <ol style="padding:1rem;list-style:none;display:flex;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo/docs"
              >
                docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo/docs/arch"
              >
                arch
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div style="margin-top:10px">
        <div style="margin-top:10px;max-width:600px;margin:auto">
          <ul>
            <li style="font-size:1.5rem;border-bottom:solid black 1px;margin-bottom:1rem;padding-bottom:0.5rem">
              <a href="furtherNestedFile.html"
                 style="text-decoration:none;color:#337ab7"
              >
                <span style="display:inline-block;width:1em">
                  <svg aria-hidden="true"
                       style="fill:#337ab7;height:1em;vertical-align:middle"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 384 512"
                  >
                    &lt;!--! Font Awesome Free 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --&gt;
                    <path d="M256 0v128h128L256 0zM224 128L224 0H48C21.49 0 0 21.49 0 48v416C0 490.5 21.49 512 48 512h288c26.51 0 48-21.49 48-48V160h-127.1C238.3 160 224 145.7 224 128zM272 416h-160C103.2 416 96 408.8 96 400C96 391.2 103.2 384 112 384h160c8.836 0 16 7.162 16 16C288 408.8 280.8 416 272 416zM272 352h-160C103.2 352 96 344.8 96 336C96 327.2 103.2 320 112 320h160c8.836 0 16 7.162 16 16C288 344.8 280.8 352 272 352zM288 272C288 280.8 280.8 288 272 288h-160C103.2 288 96 280.8 96 272C96 263.2 103.2 256 112 256h160C280.8 256 288 263.2 288 272z">
                    </path>
                  </svg>
                </span>
                <span style="margin-left:1rem">
                  furtherNestedFile.html
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;box-sizing:border-box;min-height:25vh;position:relative;text-align:center;padding:1em 0 2em 0;line-height:1.5rem">
      <a href="https://github.com/bbc/morty-docs"
         style="color:#337ab7"
      >
        Morty-Docs on github
      </a>
      <br>
      Page generated on
      1
      <sup>
        st
      </sup>
      December
      2022
    </footer>
  </body>
</html>
`;

exports[`Generate Indexes with the correct html to match snapshot with a colon in the filename 1`] = `
<html lang="en"
      style="min-height:100vh;font-size:16px"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      Morty Docs
    </title>
    <style>
      /* http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
 margin: 0;
 padding: 0;
 border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
 display: block;
}
body {
 line-height: 1;
}
ol, ul {
 list-style: none;
}
blockquote, q {
 quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
 content: '';
 content: none;
}
table {
 border-collapse: collapse;
 border-spacing: 0;
}
sup {
  vertical-align: super;
  font-size: smaller;
  padding-right: 0.2rem;
}
    </style>
  </head>
  <body style="min-height:100vh;font-family:&quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;color:#333;background-color:#fff">
    <div style="min-height:75vh;padding-bottom:20px">
      <div style="border:none;border-radius:0;background-color:#000;margin-bottom:0;width:100%">
        <nav>
          <ol style="padding:1rem;list-style:none;display:flex;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div style="margin-top:10px">
        <div style="margin-top:10px;max-width:600px;margin:auto">
          <ul>
            <li style="font-size:1.5rem;border-bottom:solid black 1px;margin-bottom:1rem;padding-bottom:0.5rem">
              <a href="file%3Afoo1.html"
                 style="text-decoration:none;color:#337ab7"
              >
                <span style="display:inline-block;width:1em">
                  <svg aria-hidden="true"
                       style="fill:#337ab7;height:1em;vertical-align:middle"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 384 512"
                  >
                    &lt;!--! Font Awesome Free 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --&gt;
                    <path d="M256 0v128h128L256 0zM224 128L224 0H48C21.49 0 0 21.49 0 48v416C0 490.5 21.49 512 48 512h288c26.51 0 48-21.49 48-48V160h-127.1C238.3 160 224 145.7 224 128zM272 416h-160C103.2 416 96 408.8 96 400C96 391.2 103.2 384 112 384h160c8.836 0 16 7.162 16 16C288 408.8 280.8 416 272 416zM272 352h-160C103.2 352 96 344.8 96 336C96 327.2 103.2 320 112 320h160c8.836 0 16 7.162 16 16C288 344.8 280.8 352 272 352zM288 272C288 280.8 280.8 288 272 288h-160C103.2 288 96 280.8 96 272C96 263.2 103.2 256 112 256h160C280.8 256 288 263.2 288 272z">
                    </path>
                  </svg>
                </span>
                <span style="margin-left:1rem">
                  file:foo1.html
                </span>
              </a>
            </li>
            <li style="font-size:1.5rem;border-bottom:solid black 1px;margin-bottom:1rem;padding-bottom:0.5rem">
              <a href="foo2.html"
                 style="text-decoration:none;color:#337ab7"
              >
                <span style="display:inline-block;width:1em">
                  <svg aria-hidden="true"
                       style="fill:#337ab7;height:1em;vertical-align:middle"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 384 512"
                  >
                    &lt;!--! Font Awesome Free 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --&gt;
                    <path d="M256 0v128h128L256 0zM224 128L224 0H48C21.49 0 0 21.49 0 48v416C0 490.5 21.49 512 48 512h288c26.51 0 48-21.49 48-48V160h-127.1C238.3 160 224 145.7 224 128zM272 416h-160C103.2 416 96 408.8 96 400C96 391.2 103.2 384 112 384h160c8.836 0 16 7.162 16 16C288 408.8 280.8 416 272 416zM272 352h-160C103.2 352 96 344.8 96 336C96 327.2 103.2 320 112 320h160c8.836 0 16 7.162 16 16C288 344.8 280.8 352 272 352zM288 272C288 280.8 280.8 288 272 288h-160C103.2 288 96 280.8 96 272C96 263.2 103.2 256 112 256h160C280.8 256 288 263.2 288 272z">
                    </path>
                  </svg>
                </span>
                <span style="margin-left:1rem">
                  foo2.html
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;box-sizing:border-box;min-height:25vh;position:relative;text-align:center;padding:1em 0 2em 0;line-height:1.5rem">
      <a href="https://github.com/bbc/morty-docs"
         style="color:#337ab7"
      >
        Morty-Docs on github
      </a>
      <br>
      Page generated on
      1
      <sup>
        st
      </sup>
      December
      2022
    </footer>
  </body>
</html>
`;

exports[`Generate Indexes with the correct html to match snapshot with a content title 1`] = `
<html lang="en"
      style="min-height:100vh;font-size:16px"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      Morty Docs
    </title>
    <style>
      /* http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
 margin: 0;
 padding: 0;
 border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
 display: block;
}
body {
 line-height: 1;
}
ol, ul {
 list-style: none;
}
blockquote, q {
 quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
 content: '';
 content: none;
}
table {
 border-collapse: collapse;
 border-spacing: 0;
}
sup {
  vertical-align: super;
  font-size: smaller;
  padding-right: 0.2rem;
}
    </style>
  </head>
  <body style="min-height:100vh;font-family:&quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;color:#333;background-color:#fff">
    <div style="min-height:75vh;padding-bottom:20px">
      <div style="border:none;border-radius:0;background-color:#000;margin-bottom:0;width:100%">
        <nav>
          <ol style="padding:1rem;list-style:none;display:flex;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div style="margin-top:10px">
        <div style="text-align:center;margin-bottom:20px;margin-top:32px">
          <h1 style="font-size:2rem;font-weight:500">
            some-repo
          </h1>
        </div>
        <div style="margin-top:10px;max-width:600px;margin:auto">
          <ul>
            <li style="font-size:1.5rem;border-bottom:solid black 1px;margin-bottom:1rem;padding-bottom:0.5rem">
              <a href="foo1.html"
                 style="text-decoration:none;color:#337ab7"
              >
                <span style="display:inline-block;width:1em">
                  <svg aria-hidden="true"
                       style="fill:#337ab7;height:1em;vertical-align:middle"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 384 512"
                  >
                    &lt;!--! Font Awesome Free 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --&gt;
                    <path d="M256 0v128h128L256 0zM224 128L224 0H48C21.49 0 0 21.49 0 48v416C0 490.5 21.49 512 48 512h288c26.51 0 48-21.49 48-48V160h-127.1C238.3 160 224 145.7 224 128zM272 416h-160C103.2 416 96 408.8 96 400C96 391.2 103.2 384 112 384h160c8.836 0 16 7.162 16 16C288 408.8 280.8 416 272 416zM272 352h-160C103.2 352 96 344.8 96 336C96 327.2 103.2 320 112 320h160c8.836 0 16 7.162 16 16C288 344.8 280.8 352 272 352zM288 272C288 280.8 280.8 288 272 288h-160C103.2 288 96 280.8 96 272C96 263.2 103.2 256 112 256h160C280.8 256 288 263.2 288 272z">
                    </path>
                  </svg>
                </span>
                <span style="margin-left:1rem">
                  foo1.html
                </span>
              </a>
            </li>
            <li style="font-size:1.5rem;border-bottom:solid black 1px;margin-bottom:1rem;padding-bottom:0.5rem">
              <a href="foo2.html"
                 style="text-decoration:none;color:#337ab7"
              >
                <span style="display:inline-block;width:1em">
                  <svg aria-hidden="true"
                       style="fill:#337ab7;height:1em;vertical-align:middle"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 384 512"
                  >
                    &lt;!--! Font Awesome Free 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --&gt;
                    <path d="M256 0v128h128L256 0zM224 128L224 0H48C21.49 0 0 21.49 0 48v416C0 490.5 21.49 512 48 512h288c26.51 0 48-21.49 48-48V160h-127.1C238.3 160 224 145.7 224 128zM272 416h-160C103.2 416 96 408.8 96 400C96 391.2 103.2 384 112 384h160c8.836 0 16 7.162 16 16C288 408.8 280.8 416 272 416zM272 352h-160C103.2 352 96 344.8 96 336C96 327.2 103.2 320 112 320h160c8.836 0 16 7.162 16 16C288 344.8 280.8 352 272 352zM288 272C288 280.8 280.8 288 272 288h-160C103.2 288 96 280.8 96 272C96 263.2 103.2 256 112 256h160C280.8 256 288 263.2 288 272z">
                    </path>
                  </svg>
                </span>
                <span style="margin-left:1rem">
                  foo2.html
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;box-sizing:border-box;min-height:25vh;position:relative;text-align:center;padding:1em 0 2em 0;line-height:1.5rem">
      <a href="https://github.com/bbc/morty-docs"
         style="color:#337ab7"
      >
        Morty-Docs on github
      </a>
      <br>
      Page generated on
      1
      <sup>
        st
      </sup>
      December
      2022
    </footer>
  </body>
</html>
`;

exports[`Generate Indexes with the correct html to match snapshot with a pdf file 1`] = `
<html lang="en"
      style="min-height:100vh;font-size:16px"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      Morty Docs
    </title>
    <style>
      /* http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
 margin: 0;
 padding: 0;
 border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
 display: block;
}
body {
 line-height: 1;
}
ol, ul {
 list-style: none;
}
blockquote, q {
 quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
 content: '';
 content: none;
}
table {
 border-collapse: collapse;
 border-spacing: 0;
}
sup {
  vertical-align: super;
  font-size: smaller;
  padding-right: 0.2rem;
}
    </style>
  </head>
  <body style="min-height:100vh;font-family:&quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;color:#333;background-color:#fff">
    <div style="min-height:75vh;padding-bottom:20px">
      <div style="border:none;border-radius:0;background-color:#000;margin-bottom:0;width:100%">
        <nav>
          <ol style="padding:1rem;list-style:none;display:flex;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div style="margin-top:10px">
        <div style="margin-top:10px;max-width:600px;margin:auto">
          <ul>
            <li style="font-size:1.5rem;border-bottom:solid black 1px;margin-bottom:1rem;padding-bottom:0.5rem">
              <a href="foo1.html"
                 style="text-decoration:none;color:#337ab7"
              >
                <span style="display:inline-block;width:1em">
                  <svg aria-hidden="true"
                       style="fill:#337ab7;height:1em;vertical-align:middle"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 384 512"
                  >
                    &lt;!--! Font Awesome Free 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --&gt;
                    <path d="M256 0v128h128L256 0zM224 128L224 0H48C21.49 0 0 21.49 0 48v416C0 490.5 21.49 512 48 512h288c26.51 0 48-21.49 48-48V160h-127.1C238.3 160 224 145.7 224 128zM272 416h-160C103.2 416 96 408.8 96 400C96 391.2 103.2 384 112 384h160c8.836 0 16 7.162 16 16C288 408.8 280.8 416 272 416zM272 352h-160C103.2 352 96 344.8 96 336C96 327.2 103.2 320 112 320h160c8.836 0 16 7.162 16 16C288 344.8 280.8 352 272 352zM288 272C288 280.8 280.8 288 272 288h-160C103.2 288 96 280.8 96 272C96 263.2 103.2 256 112 256h160C280.8 256 288 263.2 288 272z">
                    </path>
                  </svg>
                </span>
                <span style="margin-left:1rem">
                  foo1.html
                </span>
              </a>
            </li>
            <li style="font-size:1.5rem;border-bottom:solid black 1px;margin-bottom:1rem;padding-bottom:0.5rem">
              <a href="foo2.pdf"
                 style="text-decoration:none;color:#337ab7"
              >
                <span style="display:inline-block;width:1em">
                  <svg aria-hidden="true"
                       style="fill:#337ab7;height:1em;vertical-align:middle"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 384 512"
                  >
                    &lt;!--! Font Awesome Free 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --&gt;
                    <path d="M256 0v128h128L256 0zM224 128L224 0H48C21.49 0 0 21.49 0 48v416C0 490.5 21.49 512 48 512h288c26.51 0 48-21.49 48-48V160h-127.1C238.3 160 224 145.7 224 128zM272 416h-160C103.2 416 96 408.8 96 400C96 391.2 103.2 384 112 384h160c8.836 0 16 7.162 16 16C288 408.8 280.8 416 272 416zM272 352h-160C103.2 352 96 344.8 96 336C96 327.2 103.2 320 112 320h160c8.836 0 16 7.162 16 16C288 344.8 280.8 352 272 352zM288 272C288 280.8 280.8 288 272 288h-160C103.2 288 96 280.8 96 272C96 263.2 103.2 256 112 256h160C280.8 256 288 263.2 288 272z">
                    </path>
                  </svg>
                </span>
                <span style="margin-left:1rem">
                  foo2.pdf
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;box-sizing:border-box;min-height:25vh;position:relative;text-align:center;padding:1em 0 2em 0;line-height:1.5rem">
      <a href="https://github.com/bbc/morty-docs"
         style="color:#337ab7"
      >
        Morty-Docs on github
      </a>
      <br>
      Page generated on
      1
      <sup>
        st
      </sup>
      December
      2022
    </footer>
  </body>
</html>
`;

exports[`Generate Indexes with the correct html to match snapshot without a content title 1`] = `
<html lang="en"
      style="min-height:100vh;font-size:16px"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      Morty Docs
    </title>
    <style>
      /* http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
 margin: 0;
 padding: 0;
 border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
 display: block;
}
body {
 line-height: 1;
}
ol, ul {
 list-style: none;
}
blockquote, q {
 quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
 content: '';
 content: none;
}
table {
 border-collapse: collapse;
 border-spacing: 0;
}
sup {
  vertical-align: super;
  font-size: smaller;
  padding-right: 0.2rem;
}
    </style>
  </head>
  <body style="min-height:100vh;font-family:&quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;color:#333;background-color:#fff">
    <div style="min-height:75vh;padding-bottom:20px">
      <div style="border:none;border-radius:0;background-color:#000;margin-bottom:0;width:100%">
        <nav>
          <ol style="padding:1rem;list-style:none;display:flex;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:1.5rem;text-decoration:none"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div style="margin-top:10px">
        <div style="margin-top:10px;max-width:600px;margin:auto">
          <ul>
            <li style="font-size:1.5rem;border-bottom:solid black 1px;margin-bottom:1rem;padding-bottom:0.5rem">
              <a href="foo1.html"
                 style="text-decoration:none;color:#337ab7"
              >
                <span style="display:inline-block;width:1em">
                  <svg aria-hidden="true"
                       style="fill:#337ab7;height:1em;vertical-align:middle"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 384 512"
                  >
                    &lt;!--! Font Awesome Free 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --&gt;
                    <path d="M256 0v128h128L256 0zM224 128L224 0H48C21.49 0 0 21.49 0 48v416C0 490.5 21.49 512 48 512h288c26.51 0 48-21.49 48-48V160h-127.1C238.3 160 224 145.7 224 128zM272 416h-160C103.2 416 96 408.8 96 400C96 391.2 103.2 384 112 384h160c8.836 0 16 7.162 16 16C288 408.8 280.8 416 272 416zM272 352h-160C103.2 352 96 344.8 96 336C96 327.2 103.2 320 112 320h160c8.836 0 16 7.162 16 16C288 344.8 280.8 352 272 352zM288 272C288 280.8 280.8 288 272 288h-160C103.2 288 96 280.8 96 272C96 263.2 103.2 256 112 256h160C280.8 256 288 263.2 288 272z">
                    </path>
                  </svg>
                </span>
                <span style="margin-left:1rem">
                  foo1.html
                </span>
              </a>
            </li>
            <li style="font-size:1.5rem;border-bottom:solid black 1px;margin-bottom:1rem;padding-bottom:0.5rem">
              <a href="foo2.html"
                 style="text-decoration:none;color:#337ab7"
              >
                <span style="display:inline-block;width:1em">
                  <svg aria-hidden="true"
                       style="fill:#337ab7;height:1em;vertical-align:middle"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 384 512"
                  >
                    &lt;!--! Font Awesome Free 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --&gt;
                    <path d="M256 0v128h128L256 0zM224 128L224 0H48C21.49 0 0 21.49 0 48v416C0 490.5 21.49 512 48 512h288c26.51 0 48-21.49 48-48V160h-127.1C238.3 160 224 145.7 224 128zM272 416h-160C103.2 416 96 408.8 96 400C96 391.2 103.2 384 112 384h160c8.836 0 16 7.162 16 16C288 408.8 280.8 416 272 416zM272 352h-160C103.2 352 96 344.8 96 336C96 327.2 103.2 320 112 320h160c8.836 0 16 7.162 16 16C288 344.8 280.8 352 272 352zM288 272C288 280.8 280.8 288 272 288h-160C103.2 288 96 280.8 96 272C96 263.2 103.2 256 112 256h160C280.8 256 288 263.2 288 272z">
                    </path>
                  </svg>
                </span>
                <span style="margin-left:1rem">
                  foo2.html
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;box-sizing:border-box;min-height:25vh;position:relative;text-align:center;padding:1em 0 2em 0;line-height:1.5rem">
      <a href="https://github.com/bbc/morty-docs"
         style="color:#337ab7"
      >
        Morty-Docs on github
      </a>
      <br>
      Page generated on
      1
      <sup>
        st
      </sup>
      December
      2022
    </footer>
  </body>
</html>
`;
